# Taskuccino

./: .gitignore  LICENSE  README.md  ai_response_cog.py  bot.py  config.py  discord_client.py  ollama_client.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: pylint.yml
taskuccino/: __init__.py  _types.py  ai_response_cog.py  config.py  ollama_client.py  ollama_processor.py  taskuccino.py
